@@ -26,10 +26,9 @@
 #include <map>
 #include <string>
 
-using namespace Xapian;
-
 using namespace std;
 
+namespace Xapian {
 
 Letor::Letor(const Letor & o) : internal(o.internal) { }
 
@@ -134,4 +133,6 @@ Letor::letor_learn_model(int s, int k) {
 void
 Letor::prepare_training_file(const string & query_file, const string & qrel_file, int msetsize) {
     internal->prepare_training_file(query_file, qrel_file, msetsize);
+}
+
 }
