@@ -1,3 +1,8 @@
+Wed May 16 11:24:02 GMT 2012  Olly Betts <olly@survex.com>
+
+	* letor.cc: Don't use "using Xapian", but instead wrap the code in
+	  "namespace Xapian {" and "}".
+
 Wed May 16 11:23:10 GMT 2012  Olly Betts <olly@survex.com>
 
 	* letor.cc: Doesn't use <cstring>.
